--- a/templates/index.html
+++ b/templates/index.html
@@ -65,33 +65,23 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
 <h2><span class="c5">Sponsors</h2>
 <p>TMLR is supported by our generous sponsors:</p>
 <p class="c2 c6"></p>
-<p><span>&nbsp; &nbsp; <span
-        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 150.16px; height: 61.00px;"><img
-            alt="" src="img/mila.png"
-            style="width: 150.16px; height: 61.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-            title=""><span>&nbsp;<span class="c3"><a class="c1"
-            href="https://www.google.com/url?q=https://mila.quebec/en/&amp;sa=D&amp;source=editors&amp;ust=1638370889700000&amp;usg=AOvVaw1xT6VgA26o_TSDj4EG17s7">Mila
-            - Quebec AI Institute </a></p>
-<p><span>&nbsp; &nbsp; <span
-        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 151.53px; height: 62.61px;"><img
-            alt="" src="img/vector.png"
-            style="width: 151.53px; height: 62.61px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-            title=""><span class="c3"><a class="c1"
-            href="https://www.google.com/url?q=https://vectorinstitute.ai&amp;sa=D&amp;source=editors&amp;ust=1638370889701000&amp;usg=AOvVaw0Lc2r2IXhGPpExfs46ACmY">Vector
-            Institute</a></p>
-<p><span>&nbsp; &nbsp; <span
-        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 120.15px; height: 43.13px;"><img
-            alt="" src="img/cifar.png"
-            style="width: 120.15px; height: 43.13px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-            title=""><span class="c3"><a class="c1"
-            href="https://www.google.com/url?q=https://cifar.ca&amp;sa=D&amp;source=editors&amp;ust=1638370889701000&amp;usg=AOvVaw0aG30TanQX1_qW-Qr7hwEt">CIFAR</a>
-</p>
-<p><span>&nbsp; &nbsp; <span
-        style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 158.63px; height: 38.29px;"><img
+<p><span>&nbsp; &nbsp; <img
+            alt="Mila" src="img/mila.png"
+            style="width: 150.16px; height: 61.00px; padding-left: 2em.00px; margin-top: 0.00px; "
+            title="Mila">
+            &nbsp;&nbsp;<img
+            alt="Vector" src="img/vector.png"
+            style="width: 151.53px; height: 62.61px; padding-left: 2em.00px; margin-top: 0.00px; "
+            title="Vector
+            Institute">
+            &nbsp;&nbsp;<img
+            alt="CIFAR" src="img/cifar.png"
+            style="width: 120.15px; height: 43.13px; padding-left: 2em.00px; margin-top: 0.00px; "
+            title="">
+            &nbsp;&nbsp;<img
             alt="" src="img/deepmind.png"
-            style="width: 158.63px; height: 38.29px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);"
-            title=""><span class="c3"><a class="c1"
-            href="https://www.google.com/url?q=https://deepmind.com&amp;sa=D&amp;source=editors&amp;ust=1638370889702000&amp;usg=AOvVaw34WLzfgsxrTDMmK0kY9gTE">DeepMind</a>
+            style="width: 158.63px; height: 38.29px; padding-left: 2em.00px; margin-top: 0.00px; "
+            title="">
 </p>
 
 
