TMLR style files

--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -96,7 +96,7 @@
 <p class="c0"><span class="c4"></span></p>
 <p class="c9"><span class="bold">Final verification of camera ready submission</span><span>&nbsp; &nbsp;As your final
         task for an accepted paper, you are asked to quickly verify that the camera ready manuscript complies with
-        TMLR stylefile, with all author information inserted in the manuscript as well as the link to the OpenReview
+        <a href="https://github.com/JmlrOrg/tmlr-style-file">TMLR stylefile</a>, with all author information inserted in the manuscript as well as the link to the OpenReview
         page for the submission.</span></p>
 
 
