--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -30,8 +30,8 @@
     <h2 class="c5" id="h.s51t8e58eio9"><span>Format</span></h2>
     <p class="c0"><span>Submissions may be any length</span><span>, </span><span>but </span><span>a paper&rsquo;s length
             should be justified by its content and papers that are unusually long (not counting any Appendices) are
-            likely to result in reviewing delays. Submissions must be PDF files generated using the TMLR LaTeX stylefile
-            and template </span><span>linked below</span><span class="c3">. The submission PDF may include an Appendix,
+            likely to result in reviewing delays. Submissions must be PDF files generated using the <a href="https://github.com/JmlrOrg/jmlr-style-file/archive/refs/heads/master.zip">TMLR LaTeX stylefile
+            and template</a>. The submission PDF may include an Appendix,
             after the references (for proofs, derivations or complimentary results). Looking at the Appendix is at the
             discretion of the reviewers.</span></p>
     <p class="c0 c8"><span class="c3"></span></p>
