--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,6 +40,13 @@
             However, you may come across it by chance. If this happens, and you believe that it will influence your
             judgment, please contact the action editor, who will help decide whether you should be replaced with a new
             reviewer.</span></p>
+    <p class="c3"><span class="italic">Q: The submission has an appendix and supplementary material. Am I obligated to consult it?</span></p>
+    <p class="c3"><span class="c0">A: Much like for reviewing at conferences, consulting appendices and supplementary material is left to the discretion of the reviewer.  
+        </span></p>
+    <p class="c3"><span class="italic">Q: Can I discuss the paper privately with the other reviewers and/or the Action Editor?</span></p>
+    <p class="c3"><span class="c0">A: Yes, but only once all 3 reviewers have posted their review. Simply post a comment that is only visible to them to start the discussion.
+        </span></p>
+
     <p class="c3 c5"><span class="c0"></span></p>
     <h2 class="c4" id="h.82ajlcn8xqwm"><span class="c2">Action Editors</span></h2>
     <p class="c3"><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
