--- a/templates/index.html
+++ b/templates/index.html
@@ -45,13 +45,13 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
             Mohamed</a>: DeepMind.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://www.is.mpg.de/~bs&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw009dr48vTYCKOTd3X9eA_j">Berhard
-            Schoelkopf</a>: Max Planck Institute for Intelligent Systems.</p>
+            Schölkopf</a>: Max Planck Institute for Intelligent Systems.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://natschluter.github.io&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw3TXm64gg4OcsLzTpXuyudn">Natalie
             Schluter</a>: Google and IT University, Copenhagen.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=http://koerding.com&amp;sa=D&amp;source=editors&amp;ust=1638370889697000&amp;usg=AOvVaw3S5IkA1Md582gH0RFo3IIC">Konrad
-            Kording</a>: University of Pennsylvania.</p>
+            Körding</a>: University of Pennsylvania.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://www.cs.cornell.edu/home/llee/&amp;sa=D&amp;source=editors&amp;ust=1638370889698000&amp;usg=AOvVaw1sHcITy7nK-iJHzetG-P9J">Lillian
             Lee</a>: Cornell University.</p>
