--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,13 +12,13 @@
     <p class="c3"><span>Please address any inquiries about the status of a paper under review to the Action Editor in
             charge of your paper. </span><span>This can be done through OpenReview</span><span class="c0">, by
             submitting a comment and putting the AE as a reader. Only if your AE is not responsive reach out to us at
-            <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a> .</span></p>
+            <a href="mailto:tmlr-info@jmlr.org">tmlr-info@jmlr.org</a> .</span></p>
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>If you found issues on the TMLR website (jmlr.org/tmlr), such as typos or broken links, please
             report them to the <a href="https://github.com/JmlrOrg/tmlr/issues">github issue tracker</a></p>
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>For any other issues, please contact our editors-in-chief (Hugo Larochelle, Kyunghyun Cho, and
-            Raia Hadsell) by emailing <a href="mailto:tmlr@jmlr.org">tmlr@jmlr.org</a>.</span></p>
+            Raia Hadsell) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
     <h1 class="c9" id="h.skb23zlpouea"><span>Frequently Asked Questions</span></h1>
     <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">Authors</span></h2>
     <p class="c3"><span class="italic">Q: How is TMLR different from other machine learning journals such as JMLR?</span>
