--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -25,8 +25,7 @@
     <p class="c0"><span>If their work carries a significant risk of harm, authors are required to include a Statement of
             Broader Impact. The statement should include a concise, concrete description of potential positive and
             negative societal impact, as well as a discussion of possible mitigations. Please read the discussion in
-            the</span><span>&nbsp;Ethics Guidelines</span><sup><a href="#cmnt7" id="cmnt_ref7">[g]</a></sup><span
-            class="c3">&nbsp;for an in depth discussion of possible risks and mitigating factors. &nbsp;</span></p>
+        the <a href="ethics.html">Ethics Guidelines</a> for an in depth discussion of possible risks and mitigating factors. &nbsp;</span></p>
     <h2 class="c5" id="h.s51t8e58eio9"><span>Format</span></h2>
     <p class="c0"><span>Submissions may be any length</span><span>, </span><span>but </span><span>a paper&rsquo;s length
             should be justified by its content and papers that are unusually long (not counting any Appendices) are
