--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -82,94 +82,112 @@
     <p>
       <span>Here’s an example on how to use the criteria above. A machine learning class report that re-runs the experiments of a published paper has educational value to the students involved. But if it doesn’t surface generalizable insights, it is unlikely to be of interest to (even a subset of) the TMLR audience, and so could be rejected based on this criteria. On the other hand, a proper reproducibility report that systematically studies the robustness or generalizability of a published method and lays out actionable lessons for its audience could satisfy this criteria.</span>
     </p>
-    <h2 id="h.ragth3czmyw6">
-      <span>Review Format</span>
+    <h2 class="c6" id="h.ragth3czmyw6">
+      <span class="c8">Review Format</span>
     </h2>
-    <p>
-      <span class="c1">A review should have the following content.</span>
-    </p>
-      <span class="c1"/>
-      <span class="c1">  Brief description, in the reviewer’s words, of the contributions and new knowledge presented by the submission. </span>
+    <p class="c1">
+      <span class="c2">A review should have the following content.</span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
-      <span class="c2">Strengths </span>
-      <span class="c2">and weaknesses  </span>
-      <span class="c1">List of the strong aspects of the submission as well as weaker elements (if any) that you think require attention from the authors.</span>
-    </p>
-    <p class="c0">
-      <span class="c1"/>
-    </p>
-    <p>
-      <span class="c2">Requested changes  </span>
-      <span class="c1">List of proposed adjustments to the submission, specifying for each whether they are critical to securing your recommendation for acceptance or would simply strengthen the work in your view.</span>
+    <p class="c1">
+      <span class="bold">Summary of contributions</span>
+      <span class="c2">  Brief description, in the reviewer’s words, of the contributions and new knowledge presented by the submission. </span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
-      <span class="c2">Broader impact concerns</span>
+    <p class="c1">
+      <span class="bold">Strengths </span>
+      <span class="bold">and weaknesses  </span>
+      <span class="c2">List of the strong aspects of the submission as well as weaker elements (if any) that you think require attention from the authors.</span>
+    </p>
+    <p class="c0">
+      <span class="c2"/>
+    </p>
+    <p class="c1">
+      <span class="bold">Requested changes  </span>
+      <span class="c2">List of proposed adjustments to the submission, specifying for each whether they are critical to securing your recommendation for acceptance or would simply strengthen the work in your view.</span>
+    </p>
+    <p class="c0">
+      <span class="c2"/>
+    </p>
+    <p class="c1">
+      <span class="bold">Broader impact concerns</span>
       <span>  Brief description of any concerns on the ethical implications of the work that would require adding a Broader Impact Statement (if one is not present) or that are not sufficiently addressed in the Broader Impact Statement section (if one is present).</span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
+    <p class="c1">
       <span>Immediately after submitting your review, the </span>
       <span>crucial period of discussion with the authors starts</span>
-      <span class="c1">. You should engage with the authors by responding to their requests for clarifications, acknowledging the changes they make to their submission and signal as soon as you are willing to recommend acceptance. </span>
+      <span class="c2">. You should engage with the authors by responding to their requests for clarifications, acknowledging the changes they make to their submission and signal as soon as you are willing to recommend acceptance. </span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
+    <p class="c1">
       <span>Once two weeks have passed since all reviews have been submitted, </span>
       <span>reviewers will be able to submit their </span>
       <span>official</span>
       <span> recommendations to the AE</span>
-      <span class="c1">. Specifically, they will be asked for the following.</span>
+      <span class="c2">. Specifically, they will be asked for the following.</span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
-      <span class="c2">Decision recommendation</span>
-      <span class="c2"> (</span>
-      <span class="bold">accept</span>
-      <span class="c2">, </span>
-      <span class="bold">leaning accept</span>
-      <span class="c2">, </span>
-      <span class="bold">leaning reject</span>
-      <span class="c2"> or </span>
-      <span class="bold">reject</span>
-      <span class="c2">)</span>
-      <span class="c1">  Whether or not you recommend accepting the submission, based on your initial assessment and the discussion with the authors that followed.</span>
+    <p class="c1">
+      <span class="bold">Decision recommendation</span>
+      <span class="bold"> (</span>
+      <span class="c3 c5">accept</span>
+      <span class="bold">, </span>
+      <span class="c3 c5">leaning accept</span>
+      <span class="bold">, </span>
+      <span class="c3 c5">leaning reject</span>
+      <span class="bold"> or </span>
+      <span class="c3 c5">reject</span>
+      <span class="bold">)</span>
+      <span class="c2">  Whether or not you recommend accepting the submission, based on your initial assessment and the discussion with the authors that followed.</span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
-      <span class="c2">Certification recommendations</span>
-      <span class="c2">  </span>
+    <p class="c1">
+      <span class="bold">Certification recommendations</span>
+      <span class="bold">  </span>
       <span>Certifications</span>
       <span> are meant to highlight particularly notable accepted submissions. Notably, it is through certifications that we make room for more speculative/editorial judgement on the significance and potential for impact of accepted submissions. Certification selection is the responsibility of the AE, however you are asked to submit your recommendation.</span>
     </p>
-    <p class="c0">
-      <span class="c1"/>
+
+    <p class="c1">
+      <span class="c2">The AE will monitor the discussion and consult the reviewers’ feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.</span>
+    </p>
+    <h2 class="c6" id="h.wa8z6pnmr5ze">
+      <span class="c8">FAQ</span>
+    </h2>
+    <p class="c1">
+      <span class="bold">The submission has an appendix and supplementary material. Am I obligated to consult it?</span>
+      <span class="c2"> </span>
+    </p>
+    <p class="c1">
+      <span>Much like for reviewing at conferences, consulting appendices and supplementary material is left to the discretion of the reviewer. </span>
     </p>
     <p class="c0">
-      <span class="c1"/>
+      <span class="c2"/>
     </p>
-    <p>
-      <span class="c1">The AE will monitor the discussion and consult the reviewers’ feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.</span>
+    <p class="c1">
+      <span class="bold">Can I discuss the paper privately with the other reviewers and/or the AE?</span>
     </p>
-  </body>
-</html>
+    <p class="c1">
+      <span>Yes, </span>
+      <span>but only once all 3 reviewers have posted their review</span>
+      <span class="c2">. Simply post a comment that is only visible to them to start the discussion.</span>
+    </p>
 
 
 {% endblock %}
