correct link for style files

--- a/templates/author-guide.html
+++ b/templates/author-guide.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h1 class="c9" id="h.9thkl4ire28v"><span>TMLR guidelines for authors </span></h1>
+    <h1>TMLR guidelines for authors</h1>
     <p class="c0"><span>This document provides instructions for authors. Authors are required to also read and be
             familiar with the <a href="editorial-policies"> Editorial Policies</a>, the <a href="ethics.html">Ethics Guidelines</a>, and the <a href="code.html">Code of Conduct</a></p>
     <h2 class="c5" id="h.x77xxp6dwm4e"><span class="c1">Overview of submission process</span></h2>
@@ -29,7 +29,8 @@
     <h2 class="c5" id="h.s51t8e58eio9"><span>Format</span></h2>
     <p class="c0"><span>Submissions may be any length</span><span>, </span><span>but </span><span>a paper&rsquo;s length
             should be justified by its content and papers that are unusually long (not counting any Appendices) are
-            likely to result in reviewing delays. Submissions must be PDF files generated using the <a href="https://github.com/JmlrOrg/tmlr-style-file/archive/refs/heads/master.zip">TMLR LaTeX stylefile
+            likely to result in reviewing delays. Submissions must be PDF files generated using the
+        <a href="https://github.com/JmlrOrg/tmlr-style-file/archive/refs/heads/main.zip">TMLR LaTeX stylefile
             and template</a>. The submission PDF may include an Appendix,
             after the references (for proofs, derivations or complimentary results). Looking at the Appendix is at the
             discretion of the reviewers.</span></p>
