--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -44,7 +44,7 @@ $(document).ready(function(){
     <ul class="editors">
       <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, New York University.</li>
       <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, DeepMind.</li>
-      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and google.</li>
+      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and Google.</li>
     </ul>
 
     <!-- <ul class="editors">{% for e in editors_in_chief %}
