--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
             Schölkopf</a>: Max Planck Institute for Intelligent Systems.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://natschluter.github.io&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw3TXm64gg4OcsLzTpXuyudn">Natalie
-            Schluter</a>: Google and IT University, Copenhagen.</p>
+            Schluter</a>: IT University, Copenhagen.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=http://koerding.com&amp;sa=D&amp;source=editors&amp;ust=1638370889697000&amp;usg=AOvVaw3S5IkA1Md582gH0RFo3IIC">Konrad
             Körding</a>: University of Pennsylvania.</p>
