--- a/templates/index.html
+++ b/templates/index.html
@@ -65,23 +65,23 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
 <h2><span class="c5">Sponsors</h2>
 <p>TMLR is supported by our generous sponsors:</p>
 <p class="c2 c6"></p>
-<p><span>&nbsp; &nbsp; <img
+<p><span>&nbsp; &nbsp; <a href="https://mila.quebec/"><img
             alt="Mila" src="img/mila.png"
             style="width: 150.16px; height: 61.00px; padding-left: 2em.00px; margin-top: 0.00px; "
-            title="Mila">
-            &nbsp;&nbsp;<img
+                                                           title="Mila"></a>
+            &nbsp;&nbsp;<a href="https://vectorinstitute.ai/"><img
             alt="Vector" src="img/vector.png"
             style="width: 151.53px; height: 62.61px; padding-left: 2em.00px; margin-top: 0.00px; "
             title="Vector
-            Institute">
-            &nbsp;&nbsp;<img
+                Institute"></a>
+            &nbsp;&nbsp;<a href="https://cifar.ca/"><img
             alt="CIFAR" src="img/cifar.png"
             style="width: 120.15px; height: 43.13px; padding-left: 2em.00px; margin-top: 0.00px; "
-            title="">
-            &nbsp;&nbsp;<img
+                                                        title=""></a>
+            &nbsp;&nbsp;<a href="https://deepmind.com/"><img
             alt="" src="img/deepmind.png"
             style="width: 158.63px; height: 38.29px; padding-left: 2em.00px; margin-top: 0.00px; "
-            title="">
+                                                             title=""></a>
 </p>
 
 
