--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,7 +15,7 @@
             <a href="mailto:tmlr-info@jmlr.org">tmlr-info@jmlr.org</a> .</span></p>
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>If you found issues on the TMLR website (jmlr.org/tmlr), such as typos or broken links, please
-            report them to the <a href="https://github.com/JmlrOrg/tmlr/issues">github issue tracker</a></p>
+            report them to the <a href="https://github.com/JmlrOrg/tmlr/issues">github issue tracker</a>.</p>
     <p class="c3 c5"><span class="c0"></span></p>
     <p class="c3"><span>For any other issues, please contact our editors-in-chief (Hugo Larochelle, Kyunghyun Cho, and
             Raia Hadsell) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
