--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -35,7 +35,7 @@
             expanded versions of conference papers.</span><span>&nbsp;There should not be any reuse of written text,
             figures or results between the submitted paper and any paper which has been published, accepted for
             publication, or submitted in parallel at another archival, peer-reviewed venue. It is acceptable for a
-            submission to overlap with previous work </span><span>at venues or tracks that are publicly declared, in
+            submission to overlap with the author's previous work if it was shared </span><span>at venues or tracks that are publicly declared, in
             writing, to be non-archival, such as workshops</span><span class="c1">, or on preprint servers such as arXiv
             and bioRxiv. </span></p>
     <h2><span class="c5">Review process</span></h2>
@@ -44,7 +44,7 @@
             benefits, including transparency of the process, reviews which are higher-quality and more constructive, and
             easier communication between authors and reviewers. Since there is ample evidence that single-blind
             reviewing may lead to biased outcomes, we follow a double blind model where the identities of authors and
-            invited reviewers are withheld.</span></p>
+            invited reviewers are withheld. Reviewers are expected not to take any actions that would violate this double blind state, e.g. searching for related presentations or arXiv preprints.</span></p>
     <p></p>
     <p><span class="c1">The review process can be summarized in the following four phases:</span></p>
     <ol class="c9 lst-kix_knagtdofk76a-0 start" start="1">
@@ -87,7 +87,7 @@
 </ol>
     <p></p>
     <p class="c0 c16"><span class="c1">Authors of a rejected submission may revise and resubmit their paper, but it will
-            need to be entered as a new submission and provide a link to the previously rejected submission as well as a
+            need to be entered as a new submission and a link provided to the previously rejected submission as well as a
             description of the changes made since. &nbsp;</span></p>
     <p></p>
     <p></p>
