Added Ethics guidelines link; rearranged links

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,21 +70,23 @@ ul li {
   <br>
   <a align="right" href="index.html" target=_top><img style="margin-bottom: 1em" align="right" class="jmlr" src="img/tmlr.jpg" border="0"></a> 
   <p><br><br><br>
-  <p align="right"> <a href="index.html"> Home Page </a> 
-
-  <p align="right"> <a href="editorial-board.html"> Editorial Board </a> 
+  <p align="right"> <a href="index.html"> Home </a> 
 
   <p align="right"> <a href="submissions.html"> Submissions</a> 
 
   <p align="right"> <a href="editorial-policies.html"> Submission guidelines and editorial policies</a> 
 
-  <p align="right"> <a href="code.html"> Code of Conduct</a> 
+  <p align="right"> <a href="author-guide.html"> Author guidelines</a> 
 
   <p align="right"> <a href="reviewer-guide.html"> Reviewer guidelines</a> 
 
-  <p align="right"> <a href="author-guide.html"> Author guidelines</a> 
+  <p align="right"> <a href="ae-guide.html"> Action Editor guidelines</a> 
 
-  <p align="right"> <a href="ae-guide.html"> Action editor guidelines</a> 
+  <p align="right"> <a href="ethics.html"> Ethics guidelines</a> 
+
+  <p align="right"> <a href="code.html"> Code of conduct</a> 
+
+  <p align="right"> <a href="editorial-board.html"> Editorial board </a> 
 
   <p align="right"> <a href="contact.html">Contact and FAQ </a></p>
 
