--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -39,7 +39,7 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block content %}
-    <h1>JMLR Editorial Board</h1>
+    <h1>TMLR Editorial Board</h1>
     <h3>Editors-in-Chief</h3>
     <ul class="editors">
       <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, New York University.</li>
