--- a/templates/ae-guide.html
+++ b/templates/ae-guide.html
@@ -39,7 +39,7 @@
 </span><span>a week of accepting a paper&rsquo;s assignment. TMLR will give you access to a pool of reviewers
         who have already committed to reviewing for TMLR. However make sure to avoid reviewers
 </span><span>who</span><span>&nbsp;</span><span>1) have already filled their annual quota or 2) have an
-        unsubmitted review</span><sup><a href="#cmnt7" id="cmnt_ref7">[g]</a></sup><span>, unless you&rsquo;ve
+        unsubmitted review</span><span>, unless you&rsquo;ve
         received confirmation from the reviewer that they are willing to take on this additional review. By default,
         reviewers are asked to submit their review within </span><span>2 weeks</span><span>&nbsp;of their
         assignment. </span><span>However, if the submission is longer than 12 pages (excluding any appendix), we
