--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@ We use the reviewing and publication systems on <a href="https://openreview.net/
             href="https://www.google.com/url?q=https://scholar.google.com/citations?user%3DcIlDEugAAAAJ%26hl%3Den&amp;sa=D&amp;source=editors&amp;ust=1638370889695000&amp;usg=AOvVaw0wAW2bpdQq4RClN1UiPhSU">Shakir
             Mohamed</a>: DeepMind.</p>
 <p><a class="c1"
-            href="https://www.google.com/url?q=https://www.is.mpg.de/~bs&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw009dr48vTYCKOTd3X9eA_j">Berhard
+            href="https://www.google.com/url?q=https://www.is.mpg.de/~bs&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw009dr48vTYCKOTd3X9eA_j">Bernhard
             Schölkopf</a>: Max Planck Institute for Intelligent Systems.</p>
 <p><a class="c1"
             href="https://www.google.com/url?q=https://natschluter.github.io&amp;sa=D&amp;source=editors&amp;ust=1638370889696000&amp;usg=AOvVaw3TXm64gg4OcsLzTpXuyudn">Natalie
