--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,6 +20,42 @@
     <p class="c3"><span>For any other issues, please contact our editors-in-chief (Hugo Larochelle, Kyunghyun Cho, and
             Raia Hadsell) by emailing <a href="mailto:tmlr-editors@jmlr.org">tmlr-editors@jmlr.org</a>.</span></p>
     <h1 class="c9" id="h.skb23zlpouea"><span>Frequently Asked Questions</span></h1>
+    <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">General</span></h2>
+    <p class="c3"><span class="italic">Q: Will there be multiple back-and-forth rounds between reviewers and authors, as in some journals, or just one round as with most conferences?
+    </p>    
+    <p class="c3"><span class="c0">A: There is one discussion phase, but during that phase there can be as much (and as frequent) back and forth, including revisions to the manuscript, as the authors and reviewers need. The discussion phase will be at least 2 weeks and up to 4 weeks long.
+    </p>    
+    <p class="c3"><span class="italic">Q: How are reviewers assigned? Will it be entirely up to the action editors, or will there be a bidding process?
+    </p>    
+    <p class="c3"><span class="c0">A: Assignments will largely be up to action editors. However, because submissions are shown publicly on OpenReview, a user who is not in conflict with the submission may request to be a reviewer (and it will be up to the action editor to accept the request).
+    </p>    
+    <p class="c3"><span class="italic">Q: How does the double blind policy work? Would papers already on arXiv be allowed? How about papers that are visible on authors' websites, etc.? 
+    </p>    
+    <p class="c3"><span class="c0">A: You can still submit, even if a preprint of your work already is available online somewhere (as long as it's not in official proceedings for some other publishing venue). We follow the same approach as double blind conferences, asking that reviewers don't actively search online to figure out who the authors are.
+    </p>    
+    <p class="c3"><span class="italic">Q: Will other artifacts of a paper be available, such as software, data, talk recordings or videos, slides, public discussions?
+    </p>    
+    <p class="c3"><span class="c0">A: Code and videos may be uploaded and associated with camera ready papers. This may expand over time.
+    </p>    
+    <p class="c3"><span class="italic">Q: Are you using Toronto paper matching in the review system?
+    </p>    
+    <p class="c3"><span class="c0">A: OpenReview has its own paper matching system to rank similarity of reviewers and papers, and we will be leveraging it.
+    </p>    
+    <p class="c3"><span class="italic">Q: Will accepted TMLR papers have the opportunity to be presented in ML conferences like NeurIPS, ICML, and ICLR?
+    </p>    
+    <p class="c3"><span class="c0">A: We hope that TMLR will eventually partner with workshops and conferences (see blog post).
+We don't have such agreements with these conferences, but we'd like to down the road.
+    </p>    
+    <p class="c3"><span class="italic">Q: Will non-anonymous OpenReview users be able to comment on the paper during the review process?
+    </p>    
+    <p class="c3"><span class="c0">A: Yes.
+    </p>    
+    <p class="c3"><span class="italic">Q: Does TMLR have a preference for methodological/theoretical work or will application papers be welcome?
+    </p>    
+    <p class="c3"><span class="c0">A: TMLR does not have a preference. As long as the paper is within scope and we have an action editor who is qualified to handle a submission, we should be open to receiving it.
+    </p>    
+        
+        
     <h2 class="c4" id="h.4bf5f8p4ashz"><span class="c2">Authors</span></h2>
     <p class="c3"><span class="italic">Q: How is TMLR different from other machine learning journals such as JMLR?</span>
     </p>
@@ -33,7 +69,17 @@
     <p class="c3"><span class="c0">A: TMLR does not make any guarantees, and manuscripts longer than 12 pages are
             subject to longer timescales, but in general the rolling review process aims to deliver a final decision
             approximately 9 weeks after submission.</span></p>
+    <p class="c3"><span class="italic">Q: Are replications of previous research welcome?
+    </p>    
+    <p class="c3"><span class="c0">A: Yes.
+    </p>    
+
+
     <h2 class="c4" id="h.xwl9w6pcc4sy"><span>Reviewers</span></h2>
+    <p class="c3"><span class="italic">Q: How long will reviewers have to complete their review?
+    </p>    
+    <p class="c3"><span class="c0">A: We ask for reviews to be submitted within 2 weeks, followed by 2 weeks of discussion with the authors. Exceptions will be made for long papers (>12 pages). While the timeframe will be tight, we're trying to compensate by ensuring a low workload at any given time (no more than 1 paper per reviewer).
+    </p>    
     <p class="c3"><span class="italic">Q: What if I have seen the paper at a workshop, on arXiv, on Twitter, etc, and I know
             who the authors are?</span></p>
     <p class="c3"><span class="c0">A: You should not try to de-anonymize any submission by actively searching for it.
