--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -3,7 +3,9 @@
 {% block content %}
 <h1>TMLR Submission Instructions</h1>
 
-<p style="text-align:center;"><b>We are not yet accepting submissions to TMLR! We expect to be up and running by early March; stay tuned for updates. The guidance below will apply once we start receiving submissions.</b>
+<p style="text-align:center;"><b>We are not yet accepting submissions to TMLR!</b>
+</p>
+<p style="text-align:center;"><b>We expect to be up and running by early March; stay tuned for updates. The guidance below will apply once we start receiving submissions.</b>
 </p>
 
 <p>
