--- a/templates/contact.html
+++ b/templates/contact.html
@@ -43,7 +43,7 @@
     </p>    
     <p class="c3"><span class="italic">Q: Will accepted TMLR papers have the opportunity to be presented in ML conferences like NeurIPS, ICML, and ICLR?
     </p>    
-    <p class="c3"><span class="c0">A: We hope that TMLR will eventually partner with workshops and conferences (see blog post).
+    <p class="c3"><span class="c0">A: We hope that TMLR will eventually partner with workshops and conferences (see <a href="https://medium.com/@hugo_larochelle_65309/announcing-the-transactions-on-machine-learning-research-3ea6101c936f">blog post</a>).
 We don't have such agreements with these conferences, but we'd like to down the road.
     </p>    
     <p class="c3"><span class="italic">Q: Will non-anonymous OpenReview users be able to comment on the paper during the review process?
