--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -110,7 +110,7 @@
             mitigations in an (otherwise optional) Broader Impact Statement. In situations where a reviewer with ethics
             expertise is required to evaluate the impact and potential for harm, or where the action editor suspects
             that no statement would make the work ethically acceptable, reach out to the
-       <a href="tmlr@jmlr.org">Editors-in-Chief</a>. </span>
+       <a href="mailto:tmlr@jmlr.org">Editors-in-Chief</a>. </span>
     </p>
     <h2><span>Evaluation criteria</span><span class="c5">&nbsp;and certifications</span>
     </h2>
