--- a/templates/reviewer-guide.html
+++ b/templates/reviewer-guide.html
@@ -20,7 +20,7 @@
 
 <p>
     <b>Open Reviewing.</b>
-    As soon as all reviews are submitted for a submission, they will become publicly visible (but anonymous). The authors’ response to your review and subsequent discussion will also be immediately visible. You are expected to actively engage with the authors until the issues you have raised for discussion have been sufficiently explored. During this process, you are expected to be respectful and abide by our Code of Conduct. 
+    As soon as all reviews are submitted for a submission, they will become publicly visible (but anonymous). The authors' response to your review and subsequent discussion will also be immediately visible. You are expected to actively engage with the authors until the issues you have raised for discussion have been sufficiently explored. During this process, you are expected to be respectful and abide by our Code of Conduct. 
 </p>
 
 <p>
@@ -41,7 +41,7 @@
       <span>Submission Acceptance Standard</span>
     </h2>
     <p>
-      The <a href="editorial-policies.html">Editorial Policies</a> page provides a brief description of TMLR’s acceptance criteria, which we expand further here.
+      The <a href="editorial-policies.html">Editorial Policies</a> page provides a brief description of TMLR's acceptance criteria, which we expand further here.
     </p>
     <p>
       Acceptance of a submission to TMLR should be based on positive answers to the following two questions.
@@ -73,14 +73,14 @@
     <p>
       <span>Crucially, it should </span>
       <span class="c4">not</span>
-      <span> be used as a reason to reject work that isn’t considered “significant” or “impactful” because it isn’t achieving a new state-of-the-art on some benchmark. Nor should it form the basis for rejecting work on a method considered not “novel enough”, as novelty of the studied method is not a necessary criteria for acceptance. We explicitly avoid these terms (“significant”, “impactful”, “novel”), and focus instead on the notion of “interest”. If the authors make it clear that there is something to be learned by some researchers in their area from their work, then the criteria of interest is considered satisfied. </span>
+      <span> be used as a reason to reject work that isn't considered “significant” or “impactful” because it isn't achieving a new state-of-the-art on some benchmark. Nor should it form the basis for rejecting work on a method considered not “novel enough”, as novelty of the studied method is not a necessary criteria for acceptance. We explicitly avoid these terms (“significant”, “impactful”, “novel”), and focus instead on the notion of “interest”. If the authors make it clear that there is something to be learned by some researchers in their area from their work, then the criteria of interest is considered satisfied. </span>
       <span class="c1">TMLR instead relies on certifications (such as “Featured” and “Outstanding”) to provide annotations on submissions that pertain to (more speculative) assertions on significance or potential for impact. </span>
     </p>
     <p class="c0">
       <span class="c1"/>
     </p>
     <p>
-      <span>Here’s an example on how to use the criteria above. A machine learning class report that re-runs the experiments of a published paper has educational value to the students involved. But if it doesn’t surface generalizable insights, it is unlikely to be of interest to (even a subset of) the TMLR audience, and so could be rejected based on this criteria. On the other hand, a proper reproducibility report that systematically studies the robustness or generalizability of a published method and lays out actionable lessons for its audience could satisfy this criteria.</span>
+      <span>Here's an example on how to use the criteria above. A machine learning class report that re-runs the experiments of a published paper has educational value to the students involved. But if it doesn't surface generalizable insights, it is unlikely to be of interest to (even a subset of) the TMLR audience, and so could be rejected based on this criteria. On the other hand, a proper reproducibility report that systematically studies the robustness or generalizability of a published method and lays out actionable lessons for its audience could satisfy this criteria.</span>
     </p>
     <h2 class="c6" id="h.ragth3czmyw6">
       <span class="c8">Review Format</span>
@@ -93,7 +93,7 @@
     </p>
     <p class="c1">
       <span class="bold">Summary of contributions</span>
-      <span class="c2">  Brief description, in the reviewer’s words, of the contributions and new knowledge presented by the submission. </span>
+      <span class="c2">  Brief description, in the reviewer's words, of the contributions and new knowledge presented by the submission. </span>
     </p>
     <p class="c0">
       <span class="c2"/>
@@ -132,27 +132,19 @@
       <span class="c2"/>
     </p>
     <p class="c1">
-      <span>Once two weeks have passed since all reviews have been submitted, </span>
-      <span>reviewers will be able to submit their </span>
-      <span>official</span>
-      <span> recommendations to the AE</span>
-      <span class="c2">. Specifically, they will be asked for the following.</span>
+      Once two weeks have passed since all reviews have been submitted, 
+      reviewers will be able to submit their 
+      official
+       recommendations to the AE
+      <span class="c2">. Specifically, they will be asked for the following.
     </p>
     <p class="c0">
       <span class="c2"/>
     </p>
     <p class="c1">
       <span class="bold">Decision recommendation</span>
-      <span class="bold"> (</span>
-      <span class="c3 c5">accept</span>
-      <span class="bold">, </span>
-      <span class="c3 c5">leaning accept</span>
-      <span class="bold">, </span>
-      <span class="c3 c5">leaning reject</span>
-      <span class="bold"> or </span>
-      <span class="c3 c5">reject</span>
-      <span class="bold">)</span>
-      <span class="c2">  Whether or not you recommend accepting the submission, based on your initial assessment and the discussion with the authors that followed.</span>
+      (accept, leaning accept, leaning reject or reject)</span>
+       Whether or not you recommend accepting the submission, based on your initial assessment and the discussion with the authors that followed.
     </p>
     <p class="c0">
       <span class="c2"/>
@@ -165,7 +157,7 @@
     </p>
 
     <p class="c1">
-      <span class="c2">The AE will monitor the discussion and consult the reviewers’ feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.</span>
+      <span class="c2">The AE will monitor the discussion and consult the reviewers' feedback and recommendations. When they will be ready to take a decision on the submission, they will also evaluate and rate your review.</span>
     </p>
 
 
